Adding a /etc/ocs-release file on bulid

--- a/app-openvpn/Makefile
+++ b/app-openvpn/Makefile
@@ -1,5 +1,8 @@
-NAME =      ocs-app-openvpn
-VERSION =   utopic
-IS_LATEST = 1
+NAME =		ocs-app-openvpn
+VERSION =	utopic
+IS_LATEST =	1
+DESCRIPTION =	OpenVPN
+TITLE =		OpenVPN
+
 
 include ../docker-rules.mk
