--- a/app-openvpn/Makefile
+++ b/app-openvpn/Makefile
@@ -3,6 +3,6 @@ VERSION =	utopic
 IS_LATEST =	1
 DESCRIPTION =	OpenVPN
 TITLE =		OpenVPN
-
+SOURCE_URL =	https://github.com/online-labs/image-builder/tree/master/app-openvpn
 
 include ../docker-rules.mk
