Adding patches per directory

--- a/app-openvpn/Dockerfile
+++ b/app-openvpn/Dockerfile
@@ -16,7 +16,8 @@ RUN apt-get -q update && \
     && apt-get clean
 
 # Patch rootfs
-ADD ./patches/ /
+ADD ./patches/etc/ /etc/
+ADD ./patches/usr/local/ /usr/local/
 
 # Clean rootfs from image-builder
 RUN /usr/local/sbin/builder-leave
